--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -1,11 +1,14 @@
-#I get error when entering 2 other assets
+#When I said I don't work, it asked for job info
+#Need to get other assets yes/no checkboxes to fill -- use selected items variable
+#Need to get my ordered lists ordered the way I set them
+#Need to allow for more than 2 jobs
+#I get error when entering 2 other_assets
 #I get error when editing other_incomes
-#Need to get other assets yes/no checkboxes to fill and public benefits checkboxes to fill
-#Work on getting self employment to fill in
 #Need to get court county to show on PDF
 #Work on review screen -- do I have all the items they might edit?
 #I don't think I need to collect employer phone numbers
 #Possible to get $0 not to show in some places?
+#To erase dollar sign, add ,symbol="")
 #Will need to create overflow and addendum
 #For other financial forms, need to ask how much they pay and how much someone else pays for the expenses. When user is filling out fee waiver only, just need to know what they pay, so keep it simple.
 
@@ -144,18 +147,28 @@ code: |
       public_benefits.gathered
       
       user_qualifies_interstitial
-      
+      #If they get public benefits ask if they work too and gather only employer info      
       if employed:
         jobs.target_number
         if jobs.target_number == 1:
           jobs[0].employer.name.first
-        if jobs.target_number > 1:
+        if jobs.target_number == 2:
           jobs[0].employer.name.first
           jobs[1].employer.name.first
+        if jobs.target_number == 3:
+          jobs[0].employer.name.first
+          jobs[1].employer.name.first
+          jobs[2].employer.name.first
+          
     else:
       employed
-      jobs.gather()
-      review_jobs
+      #If they say they are self-employed gather their monthly net income and set 
+      if jobs[0].is_self_employed:
+        users1_income_self_employment_monthly_amount
+        
+      else:
+        jobs.gather()
+        review_jobs
 
       if other_incomes.selected_types.any_true():
         other_incomes.there_are_any = True
@@ -457,7 +470,17 @@ id: self employed income
 question: |
   What do you make in self-employed income each month?
 subquestion: |
-  Net income is gross income minus your business expenses.
+  
+  To figure your monthly net income:
+  
+  - Look at your gross income over the last 12 months of self-employment. 
+  - Subtract your business expenses. 
+  - Then divide by 12. 
+  
+  Or you can:
+  
+  - Look at your most recent Schedule C form from your federal taxes.
+  - Divide the net income by 12.
 fields:
   - Your monthly net income: users1_income_self_employment_monthly_amount
     datatype: currency
@@ -843,24 +866,9 @@ fields:
 #mandatory: True
 #code: |
 #  users1_gross_monthly_wages = currency(jobs.total(source=["full time","part time"],times_per_year=12)))
+
 ---
-#mandatory: True
-#code: |
-#  users1_other_income_monthly_subtotal = sum_if_defined('users1_income_unemployment_monthly_amount',
-#      'users1_income_child_support_monthly_amount',
-#      'users1_income_other_monthly_amount')
----
-#mandatory: True
-#code: |
-#  users1_income_monthly_total = sum_if_defined('jobs.total(source=["full time","part time"],times_per_year=12)',
-#      'users1_other_income_monthly_subtotal')
----
-###To multiply for annual income###
-mandatory: True
-code: |
-  users1_income_annual_total = sum_if_defined('users1_income_monthly_total') * 12
----
-id: Show income monthly and annual totals
+id: show income monthly and annual totals
 mandatory: True
 continue button field: user_sees_income_total
 question: |
@@ -901,7 +909,7 @@ data: !!omap
   - auto insurance: "Auto insurance"
   - other insurance: "Other insurance"
   - child support: "Child support payment"
-  - other: "Other expenses that you can describe"
+  - other: "Other expenses like pets, kids activities, haircuts, entertainment"
 ---
 
 generic object: ALExpenseList
@@ -941,6 +949,30 @@ fields:
     default: 12
     code: |
       times_per_year_for_expenses
+---
+generic object: ALExpenseList
+id: expense information
+question: |
+  How much do you spend on your ${ ordinal(i) } household expense?
+subquestion: |
+  **Tip**: You can look back 12 months for this expense. That will give an accurate picture of how much the expense really is.
+fields: 
+  - Type of expense: x[i].source
+    code: |
+      expenses.terms_ordered
+  - Other (explain): x[i].source
+    show if:
+      variable: x[i].source
+      is: other
+  - Amount: x[i].value
+    datatype: currency
+  - How often do you pay this amount?: x[i].times_per_year
+    input type: radio
+    default: 12
+    code: |
+      times_per_year_for_expenses
+validation code: |
+  x[i].display_name = expenses.terms_ordered.get(x[i].source, x[i].source)
 ---
 #generic object: ALExpenseList
 #id: expense information
@@ -1253,6 +1285,7 @@ id: preview VT_fee_waiver
 question: |
   Preview your form before you sign it
 subquestion: |
+  
   Here is a preview of the form you will sign on the next page. 
   
   ${ al_court_bundle.as_pdf(key='preview') }
@@ -1334,7 +1367,7 @@ review:
       * ${ item.display_name }
       % endfor
 
-      % if not public_benefits.there_are_any:
+      % if not public_benefits.selected_types.any_true():
       - None
       % endif
 
@@ -1618,6 +1651,7 @@ event: VT_fee_waiver_download
 question: |
   Review your forms and download and/or print them
 subquestion: |
+  
   ${ download_screen_instructions }
 
   ${ action_button_html(url_action('review_VT_fee_waiver'), label='Edit your answers', color='info') }
@@ -1683,24 +1717,33 @@ attachments:
       - "employed_yes": ${ employed }
       - "employed_no": ${ not employed }
       
-      - "users1_employer_0_name": ${ jobs[0].employer }
+      - "users1_employer_0_name": |
+          % if jobs[0].is_self_employed:
+            Self-employed
+          % else:
+            ${ jobs[0].employer }
+          % endif
       - "users1_employer_0_address_one_line": ${ jobs[0].employer.address.on_one_line() }
 
       - "users1_employer_1_name": ${ jobs[1].employer }
       - "users1_employer_1_address_one_line": ${ jobs[1].employer.address.on_one_line() }
       
-      - "users1_receives_benefits_yes": ${ public_benefits.there_are_any }
+      - "users1_receives_benefits_yes": |
+          % if public_benefits.selected_types.any_true():
+          ${ True }
+          % endif
       - "users1_receives_benefits_no": |
-          % if public_benefits.target_number > 0:
-          ${True}
+          % if not public_benefits.selected_types.any_true():
+          ${ True }
           % endif
+   
       - "users1_benefits": |
-          % if public_benefits.there_are_any:
-            % for item in public_benefits:
-            ${ item.display_name }
-            % endfor
+          % if public_benefits.selected_types.any_true():
+          % for item in public_benefits:
+          ${ item.display_name }
+          % endfor
           % endif
-      - "users1_benefits_monthly_amount": ${ currency(public_benefits.total(times_per_year=12)) }
+      - "users1_benefits_monthly_amount": ${ currency(public_benefits.total(times_per_year=12),symbol="") }
 
       
       - "users1_income_employment_monthly_amount": ${ currency(jobs.total(source=["full time","part time"],times_per_year=12)) }
@@ -1710,11 +1753,15 @@ attachments:
       
       - "users1_income_other_monthly_amount": ${ currency(other_incomes.total(exclude_source=["unemployment_income"],times_per_year=12)) }
       - "users1_income_self_employment_monthly_amount": ${ currency(users1_income_self_employment_monthly_amount) }
+
+
+
+      - "users1_income_monthly_total": ${ float(jobs.total(source=["full time","part time"],times_per_year=12) + other_incomes.total(times_per_year=12)) + users1_income_self_employment_monthly_amount }
+      - "users1_income_annual_total": ${ float(jobs.total(source=["full time","part time"],times_per_year=1) + other_incomes.total(times_per_year=1)) + (users1_income_self_employment_monthly_amount * 12) }
       
-      - "users1_income_monthly_total": ${ currency(jobs.total(source=["full time","part time"],times_per_year=12) + other_incomes.total(times_per_year=12)) }
-      - "users1_income_annual_total": ${ currency(jobs.total(source=["full time","part time"],times_per_year=1) + other_incomes.total(times_per_year=1)) }
       
-      - "users1_expenses_rent_mortgage_monthly_amount": ${ currency(expenses.total(source=["rent"],times_per_year=12) + expenses.total(source=["mortgage"],times_per_year=12)) }   
+      
+      - "users1_expenses_rent_mortgage_monthly_amount": ${ currency(expenses.total(source=["rent"],times_per_year=12) + expenses.total(source=["mortgage"],times_per_year=12),symbol="") }   
       - "users1_expenses_electric_monthly_amount": ${ currency(expenses.total(source=["electric"],times_per_year=12)) }    
       - "users1_expenses_phone_monthly_amount": ${ currency(expenses.total(source=["phone"],times_per_year=12)) }
       - "users1_expenses_fuel_monthly_amount": ${ currency(expenses.total(source=["fuel"],times_per_year=12)) }
