--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -1,7 +1,7 @@
-#List out self-employment income on review screen and give chance to edit
+
 #Need to get other assets yes/no checkboxes to fill -- use selected items variable
 #Need to get my ordered lists ordered the way I set them
-#Need to allow for more than 2 jobs
+#Need to allow for more than 2 jobs and to allow someone to add a self-employed job, too
 #I get error when entering 2 other_assets
 #I get error when editing other_incomes
 #Work on review screen -- do I have all the items they might edit?
@@ -148,16 +148,21 @@ code: |
       user_qualifies_interstitial
       #If they get public benefits ask if they work too and gather only employer info      
       if employed:
-        jobs.target_number
         if jobs.target_number == 1:
-          jobs[0].employer.name.first
+          if not jobs[0].is_self_employed:
+            jobs[0].employer.name.first
         if jobs.target_number == 2:
-          jobs[0].employer.name.first
-          jobs[1].employer.name.first
+          if not jobs[0].is_self_employed:
+            jobs[0].employer.name.first
+          if not jobs[1].is_self_employed:
+            jobs[1].employer.name.first
         if jobs.target_number == 3:
-          jobs[0].employer.name.first
-          jobs[1].employer.name.first
-          jobs[2].employer.name.first
+          if not jobs[0].is_self_employed:
+            jobs[0].employer.name.first
+          if not jobs[1].is_self_employed:
+            jobs[1].employer.name.first 
+          if not jobs[2].is_self_employed:
+            jobs[2].employer.name.first    
           
     else:
       if employed:
@@ -257,7 +262,7 @@ code: |
 ---
 variable name: public_benefits.terms_ordered
 data: !!omap
-  - reach up: "Reach Up (or RUFA, TANF)"
+  - reach up: "Reach Up"
   - dr dynasaur: "Dr. Dynasaur / Blue First"
   - fuel assistance: "Fuel Assistance"
   - general assistance: "General Assistance (GA)"
@@ -826,7 +831,7 @@ subquestion: |
   
   We can skip some of the questions in the form. 
   
-  Click Next to answer a couple final questions.
+  Click Next to answer a few more questions.
 ---
 id: Work
 question: |
@@ -901,15 +906,15 @@ data: !!omap
   - electric: "Electric"
   - phone: "Phone"
   - fuel: "Fuel (heat and/or gas)"
-  - clothing: "Clothing"
+  - clothing: "Clothing and shoes"
   - property tax: "Property taxes"
   - medical: "Medical costs"
   - health insurance: "Health insurance"
   - auto loan: "Auto loan payment"
   - auto insurance: "Auto insurance"
-  - other insurance: "Other insurance"
+  - other insurance: "Other insurance like home, rental, business, life insurance"
   - child support: "Child support payment"
-  - other: "Other expenses like pets, kids activities, haircuts, entertainment"
+  - other: "Other expenses like pets, kids activities, haircuts, entertainment and more"
 ---
 
 generic object: ALExpenseList
@@ -1729,10 +1734,21 @@ attachments:
           % else:
             ${ jobs[0].employer }
           % endif
-      - "users1_employer_0_address_one_line": ${ jobs[0].employer.address.on_one_line() }
+      - "users1_employer_0_address_one_line": |
+          % if defined("jobs[0].employer.address"):
+          ${ jobs[0].employer.address.on_one_line() }
+          % endif
 
-      - "users1_employer_1_name": ${ jobs[1].employer }
-      - "users1_employer_1_address_one_line": ${ jobs[1].employer.address.on_one_line() }
+      - "users1_employer_1_name": |
+          % if jobs[1].is_self_employed:
+            Self-employed
+          % else:
+            ${ jobs[1].employer }
+          % endif
+      - "users1_employer_1_address_one_line": |
+          % if defined("jobs[1].employer.address"):
+          ${ jobs[1].employer.address.on_one_line() }
+          % endif
       
       - "users1_receives_benefits_yes": |
           % if public_benefits.selected_types.any_true():
