--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -3,11 +3,13 @@
 #Need to allow for more than 2 jobs and to allow someone to add a self-employed job, too
 #I get error when entering 2 other_assets
 #I get error when editing other_incomes
-#When you Edit incomes from web manager it doesn't let you edit hourly rate right
+#I get an error when trying to edit vehicle - needed definition of vehicles.there_is_another
+#When you Edit incomes from a job it doesn't let you edit hourly rate right
 #Work on review screen -- do I have all the items they might edit?
 #Possible to get $0 not to show in some places?
 #To erase dollar sign, add ,symbol="")
 #Will need to create overflow and addendum
+#Add to snapshot "has_assets": showifdef("....."),
 #For other financial forms, need to ask how much they pay and how much someone else pays for the expenses. When user is filling out fee waiver only, just need to know what they pay, so keep it simple.
 
 
@@ -115,8 +117,8 @@ sections:
   - about_you: You and your household
   - case_info: Court case info
   - review_VT_fee_waiver: Review your answers
-  - signature: Sign your document
-  - download: Download your document
+  - sign: Sign your document
+  - get_docs: Download your document
 ---
 ###This adds the signature feature to the interview###
 code: |
@@ -134,12 +136,14 @@ code: |
   nav.set_section('intro')
   which_financial_forms
   VT_fee_waiver_intro
+  set_progress(10)
   important_notes_to_user
   #user_ask_role
 
   if which_financial_forms == "fee_waiver_form":
+    set_progress(20)
     nav.set_section('your_income')
-    
+
     if public_benefits.selected_types.any_true():
       public_benefits.there_are_any = True
       public_benefits.gathered
@@ -174,12 +178,14 @@ code: |
           jobs.gather()
           review_jobs
 
+      set_progress(40)
       if other_incomes.selected_types.any_true():
         other_incomes.there_are_any = True
         other_incomes.gathered
       else:
         other_incomes.there_are_any = False
   
+      set_progress(50)
       nav.set_section('your_expenses')
       if expenses.selected_types.any_true():
         expenses.there_are_any = True
@@ -224,7 +230,6 @@ code: |
 
     
   set_progress(90)
-  trial_court.address.county
   interview_order_VT_fee_waiver = True
 
 
@@ -238,23 +243,30 @@ code: |
   al_intro_screen
   interview_order_VT_fee_waiver
   nav.set_section('review_VT_fee_waiver')
+  trial_court.address.county
   VT_fee_waiver_preview_question
   
-  # Store anonymous data for analytics / statistics
+
+  nav.set_section('sign')
+  signature_date
+  set_progress(95)
+  al_form_requires_digital_signature = False
+  basic_questions_signature_flow
+  
+    # Store anonymous data for analytics / statistics
   store_variables_snapshot(
       persistent=True,
       data={
           "zip": showifdef("users[0].address.zip"),
+          "county_where_filing": showifdef("trial_court.address.county"),
+          "gets_public_benefits": showifdef("public_benefits.sources"),
+          "employed": showifdef("employed"),
           "reached_interview_end": True,
           "num_forms": len(al_user_bundle.enabled_documents()),
       },
   )
-
-  nav.set_section('signature')
-  signature_date
-  basic_questions_signature_flow    
-  users[0].signature
-  nav.set_section('download')
+  nav.set_section('get_docs')
+  set_progress(100)
   VT_fee_waiver_download
 ---
 
@@ -1202,7 +1214,7 @@ id: other assets
 question: |
   Other assets that you have not entered already
 subquestion: |  
-  These assets may be things like tools, equipment, electronics, stocks, bonds, etc.)? — what about retirement account?
+  Other assets may be things like tools, equipment, electronics, computers, stocks, bonds, etc.)? — what about retirement account?
   
   Check any that apply to you.
 fields:
@@ -1234,6 +1246,8 @@ fields:
     datatype: currency
   - If you owe money on this asset, how much do you owe? Enter 0 if you own it outright.: other_assets[i].balance
     datatype: currency
+  - note: |
+      Other assets may be things like tools, equipment, electronics, computers, stocks, bonds, etc.)? — what about retirement account?
 ---
 
 
@@ -1287,6 +1301,33 @@ id: User signature
 question: |
   User signature
 continue button field: User_signature
+---
+id: signature choice
+decoration: file-signature
+question: |
+  Your documents are almost ready
+subquestion: |
+  How do you want to sign them?
+fields: 
+  - I will sign: signature_choice
+    input type: radio
+    choices:
+      - On my computer or phone: this_device
+    show if:
+      code: |
+        al_form_requires_digital_signature
+  - I will sign: signature_choice
+    input type: radio
+    choices:
+      - On my computer or phone: this_device
+      - On the paper with a pen after I print the documents: sign_after_printing
+    show if:
+      code: |
+        not al_form_requires_digital_signature
+continue button field: saw_signature_choice    
+---
+
+
 ---
 id: preview VT_fee_waiver
 question: |
