--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -273,10 +273,10 @@ code: |
 ---
 
 
-generic object: ALIncomeList
-code: |
-  x.move_checks_to_list(selected_terms=other_income_ordered)
-  x.update_names = True
+#generic object: ALIncomeList
+#code: |
+#  x.move_checks_to_list(selected_terms=other_income_ordered)
+#  x.update_names = True
 
 ---
 variable name: public_benefits.terms_ordered
@@ -1433,12 +1433,12 @@ review:
   - Edit: 
       - public_benefits.revisit
       - recompute:
-        - public_benefits.gathered    
+        - public_benefits.gathered   
     button: |
       **Public benefits**
       
       % for benefit in public_benefits.complete_elements():
-      * ${ benefit.source }
+      * ${ benefit.display_name }
       % endfor
 
       % if not public_benefits.selected_types.any_true():
@@ -1498,7 +1498,7 @@ review:
       % if not expenses.there_are_any:
       - None
       % endif
-      
+ 
   - note: |
       ###Assets   
       
@@ -1563,6 +1563,20 @@ review:
       ${ signature_date }
 
 ---
+generic object: ALExpenseList
+table: x.table
+rows: x
+columns:
+  - Type: |
+      row_item.display_name
+  - Amount per month: |
+      currency(row_item.total(times_per_year=12))
+edit:
+  - source
+  - value
+  - display_name
+
+---
 continue button field: users.revisit
 question: |
   Edit info about you
@@ -1607,7 +1621,7 @@ table: public_benefits.table
 rows: public_benefits
 columns:
   - Source: |
-      row_item.source if defined("row_item.source") else ""
+      row_item.display_name if defined("row_item.source") else ""
   - Value: |
       currency(row_item.value) if defined("row_item.value") else ""
 edit:
@@ -1834,9 +1848,7 @@ attachments:
           % endif
    
       - "users1_benefits": |
-          % for benefit in public_benefits.complete_elements():
-          ${ comma_list(benefit.source) }
-          % endfor
+          ${ comma_list([ benefit.display_name for benefit in public_benefits.complete_elements() ]) }
           
       - "users1_benefits_monthly_amount": ${ currency(public_benefits.total(times_per_year=12),symbol="") }
 
@@ -1879,7 +1891,7 @@ attachments:
       - "users1_expenses_auto_loan_monthly_amount": ${ currency(expenses.total(source=["auto loan"],times_per_year=12)) }
       - "users1_expenses_property_tax_monthly_amount": ${ currency(expenses.total(source=["property tax"],times_per_year=12)) }
       - "users1_expenses_all_insurance_monthly_amount": ${ currency(expenses.total(source=["health insurance", "auto insurance", "other insurance"],times_per_year=12)) }
-      - "users1_expenses_other_monthly_amount": ${ currency(expenses.total(source=["other"],times_per_year=12)) }
+      - "users1_expenses_other_monthly_amount": ${ currency(expenses.total(exclude_source=["health insurance", "rent", "food" ],times_per_year=12)) }
       - "users1_expenses_monthly_total": ${ currency(expenses.total(times_per_year=12)) }
       
       - "assets_yes": |
@@ -1946,3 +1958,9 @@ code: |
   VT_fee_waiver_attachment.overflow_fields["other_reasons_why_cannot_afford"].overflow_trigger = 534
   VT_fee_waiver_attachment.overflow_fields["other_reasons_why_cannot_afford"].label = "Why you cannot afford"
   VT_fee_waiver_attachment.overflow_fields.gathered = True
+---
+id: benefits display name
+generic object: ALIncome
+code: |
+  x.display_name = public_benefits.terms_ordered.get(x.source, x.source)
+---
